--- a/index.html
+++ b/index.html
@@ -62,6 +62,95 @@
         </button>
       </div>
 
+      <div class="container">
+        <div class="row">
+            <h2 class="p-4">Nossos Jogos</h2>
+            <div class="p-2 col-md-3">
+                <div class="card" style="">
+                    <img src="img/roleta.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Roulette</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the
+                            card's content.</p>
+                        <a href="#" class="btn btn-primary">Mais informações</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="p-2 col-md-3">
+                <div class="card" style="">
+                    <img src="img/fivecards.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Five Card</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the
+                            card's content.</p>
+                        <a href="#" class="btn btn-primary">Mais informações</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="p-2 col-md-3">
+                <div class="card" style="">
+                    <img src="img/texas.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Texas Hold'em</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the
+                            card's content.</p>
+                        <a href="#" class="btn btn-primary">Mais informações</a>
+                    </div>
+                </div>
+            </div>
+
+            <div class="p-2 col-md-3">
+                <div class="card" style="">
+                    <img src="img/blackjack.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                        <h5 class="card-title">Balckjack</h5>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the
+                            card's content.</p>
+                        <a href="#" class="btn btn-primary">Mais informações</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row">
+          <h2>Categorias de jogos</h2>
+          <div class="p-2 col-md-2">
+            <img src="https://placehold.co/150" alt="">
+            <h5 class="card-title">Slots</h5>
+          </div>
+
+          <div class="p-2 col-md-2">
+            <img src="https://placehold.co/150" alt="">
+            <h5 class="card-title">Crash Games</h5>
+          </div>
+
+          <div class="p-2 col-md-2">
+            <img src="https://placehold.co/150" alt="">
+            <h5 class="card-title">Dice</h5>
+          </div>
+
+          <div class="p-2 col-md-2">
+            <img src="https://placehold.co/150" alt="">
+            <h5 class="card-title">Mine</h5>
+          </div>
+
+          <div class="p-2 col-md-2">
+            <img src="https://placehold.co/150" alt="">
+            <h5 class="card-title">Baccarat</h5>
+          </div>
+
+          <div class="p-2 col-md-2">
+            <img src="https://placehold.co/150" alt="">
+            <h5 class="card-title">Diamonds</h5>
+          </div>
+        </div>
+    </div>
+
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
